tests/NormalTests/paczka1/small_fuzzy/15241051.err
Error in line 1: S894 A466 58,9
Error in line 7: bYdIinRwz S894 98,6
Error in line 11: S894 A328 97,2
